DABOM-514 fix: 소나큐브 반영